--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
 @import-normalize; /* bring in normalize.css styles */
 
+* {
+  --light-back-color: #fff;
+  --lightgray-back-color: #eaedf7;
+  --dark-text-color: #111111;
+  --mid-back-color: #babde7;
+  --mid-text-color: #616168;
+
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
